# yolo_game_windows

./: .gitignore  README.md  detect_in_game.py  detect_out_game.py  game.py  main.py  pyproject.toml  screenshot.py  test_model.py  train.py
