[project]
name = "yolo-demo-main"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mss>=10.1.0",
    "pillow>=11.3.0",
    "pyautogui>=0.9.54",
    "pygame>=2.6.1",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "ultralytics>=8.3.192",
]
